GNOME Bugzilla – Bug 597623
Toggling an application in gnome-session-properties and closing too quickly causes changes to be lost
Last modified: 2010-03-07 12:24:34 UTC
This was reported at: https://bugs.edge.launchpad.net/ubuntu/+source/gnome-session/+bug/444993: "If the user checks or unchecks an application listed in the start applications window and quickly clicks on the close button, the changes to that application are not remembered. If however, the user checks or unchecks an application and waits about 5 seconds before hitting close, then the changes are stored."
This also applies to creating new entries in the dialog too
Hrm, I thought I had fixed this :/
Hmmmm, we still seem to be seeing this issue in 2.28.0 though
Created attachment 145254 [details] [review] [capplet] Destroy the main window on close to ensure changes are saved For some reasons, sometimes it works, and sometimes it doesn't. By destroying the window, we make sure all objects are disposed and the changes are saved.
Attachment 145254 [details] pushed as dd9df16 - [capplet] Destroy the main window on close to ensure changes are saved
*** Bug 599246 has been marked as a duplicate of this bug. ***
*** Bug 599938 has been marked as a duplicate of this bug. ***
*** Bug 611596 has been marked as a duplicate of this bug. ***
There appears to be some confusion as to whether this has actually been fixed. Is there a patch that I can test to check that this has indeed been fixed so that we don't go on to the next version, and still not have it fixed?
The patch is attached to this bug.
What file needs modified? I can't locate any "capplet/main.c".
Wayne: the file definitely exists, see http://git.gnome.org/browse/gnome-session/tree/capplet/main.c
Thanks for pointing out the location. I appreciate that. Yea, after I posted I realized it was C code used to compile, and that was why I could not find it anywhere on my computer, and decided not to look for it anymore. :-)