[capplet] Destroy the main window on close to ensure changes are saved

For some reasons, sometimes it works, and sometimes it doesn't. By
destroying the window, we make sure all objects are disposed and the
changes are saved.

https://bugzilla.gnome.org/show_bug.cgi?id=597623